<resources>
    <string name="app_name">menudesplegablcoandrodi</string>
    <string name="por_favor_llene_los_siguiente_campos_para_ingresar_satisfactoriamente_a_su_cuenta">Por favor llene los siguiente campos para ingresar satisfactoriamente a su cuenta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="bienvenido_a_your_wallet">Bienvenido a your Wallet</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Vacaciones</string>
    <string name="menu_slideshow">Gastos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login">Login</string>
    <string name="por_favor_llene_los_siguiente_campos_para_crear_su_cuenta">Por favor llene los siguiente campos para crear su cuenta</string>
    <string name="gastos">Gastos</string>
    <string name="ingreso">Ingreso</string>
    <string name="lista_de_compras">Lista de compras</string>
    <string name="varianzasalarial">Varianzasalarial</string>
    <string name="vacaciones">Vacaciones</string>
    <string name="inicio">Inicio</string>
    <string name="varianza_salarial">Varianza salarial</string>
    <string name="Ingreso_en_cordobas">Ingreso en córdobas</string>
    <string name="Razon_de_ingreso">Razón de ingreso</string>
    <string name="Fecha_de_ingreso">Fecha de ingreso</string>
    <string name="Nuevo_salario">Nuevo salario en C$</string>
</resources>