<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"

            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_gallery"

            android:title="@string/vacaciones" />
        <item
            android:id="@+id/ingreso"

            android:title="@string/ingreso" />
        <item
            android:id="@+id/nav_slideshow"

            android:title="@string/gastos" />

        <item
            android:id="@+id/varianzaSalarial"

            android:title="@string/varianza_salarial" />
        <item
            android:id="@+id/listaDeCompras"

            android:title="@string/lista_de_compras" />

    </group>
</menu>