<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Ingreso">


    <TextView
        android:id="@+id/tvSaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="107dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/merriweather_black"
        android:text="Saldo:"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCordobas"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="C$"
        android:fontFamily="@font/merriweather"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintLeft_toRightOf="@id/tvSaldo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSaldoActual"
        android:layout_width="62dp"
        android:layout_height="27dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:text=""
        android:textStyle="bold"
        android:fontFamily="@font/merriweather"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.986"
        app:layout_constraintLeft_toRightOf="@id/tvSaldo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCordobas"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAgregarIngreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/merriweather_black"
        android:text="Agregar ingreso:"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSeparador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="604dp"
        android:text="______________"
        android:textColor="#3C55D5"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etIngreso"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/Ingreso_en_cordobas"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSeparador" />

    <EditText
        android:id="@+id/etRazonIngreso"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/Razon_de_ingreso"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etIngreso" />

    <EditText
        android:id="@+id/etFechaIngreso"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/Fecha_de_ingreso"
        android:inputType="date"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRazonIngreso" />

    <Button
        android:id="@+id/btnGuardarSaldo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:backgroundTint="#3C55D5"
        android:fontFamily="@font/merriweather_black"
        android:padding="15dp"
        android:text="Guardar"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>